<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.6</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>it.eng.opsi</groupId>
	<artifactId>service-catalogue</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>service-catalog</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>16</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.jena/apache-jena-libs -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<version>4.2.0</version>
			<type>pom</type>
		</dependency>

		<!-- -->
		<!-- https://mvnrepository.com/artifact/com.io-informatics.oss/jackson-jsonld -->
		<!-- <dependency> -->
		<!-- <groupId>com.io-informatics.oss</groupId> -->
		<!-- <artifactId>jackson-jsonld</artifactId> -->
		<!-- <version>0.1.1</version> -->
		<!-- </dependency> -->


		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.5.12</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-data-rest</artifactId>
			<version>1.5.12</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-security</artifactId>
			<version>1.5.12</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>service-catalog</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
					<jvmArguments>--illegal-access=permit</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<id>pre-integration-test</id>
						<!-- <goals> -->
						<!-- <goal>start</goal> -->
						<!-- </goals> -->
					</execution>
					<!-- <execution> -->
					<!-- <goals> -->
					<!-- <goal>repackage</goal> -->
					<!-- </goals> -->
					<!-- </execution> -->
					<execution>
						<id>post-integration-test</id>
						<!-- <goals> -->
						<!-- <goal>stop</goal> -->
						<!-- </goals> -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-maven-plugin</artifactId>
				<version>0.2</version>
				<executions>
					<!-- <execution> -->
					<!-- <phase>integration-test</phase> -->
					<!-- <goals> -->
					<!-- <goal>generate</goal> -->
					<!-- </goals> -->
					<!-- </execution> -->

				</executions>
				<configuration>
					<apiDocsUrl>http://localhost:8086/service-catalog/api-docs</apiDocsUrl>
					<outputFileName>openapi.yaml</outputFileName>
					<!-- <outputDir>/home/springdoc/maven-output</outputDir> -->
				</configuration>
			</plugin>

			<!--jsonschema2pojo plugin to generate-sources from json schema -->
			<plugin>
				<groupId>org.jsonschema2pojo</groupId>
				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
				<version>1.0.1</version>
				<configuration>
					<sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
					<targetPackage>it.eng.opsi.servicecatalog.model.generated</targetPackage>
					<includeAdditionalProperties>false</includeAdditionalProperties>
					<includeConstructors>true</includeConstructors>
					<useTitleAsClassname>true</useTitleAsClassname>
					<removeOldOutput>true</removeOldOutput>
					<useCommonsLang3>true</useCommonsLang3>
					<dateTimeType>java.time.ZonedDateTime</dateTimeType>
					<includeJsr303Annotations>true</includeJsr303Annotations>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
